Commit details: => added all three view for users => added new entity + updated existing entity => updated migration files for better Db structure => updated docker-compose config for proper Db timezone => added a friendly UI for user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
             - MYSQL_DATABASE=${DB_NAME}
             - MYSQL_USER=${DB_USER}
             - MYSQL_PASSWORD=${DB_PASSWORD}
+            - TZ=Europe/Berlin
         volumes:
             - persistent:/var/lib/mysql
 volumes:
