--- a/www/composer.json
+++ b/www/composer.json
@@ -32,7 +32,8 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0",
-        "depotwarehouse/oauth2-twitch": "*"
+        "depotwarehouse/oauth2-twitch": "*",
+        "guzzlehttp/guzzle": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
