commit details: => updated .env.dist => added some comment for methods => removed hardcoded URIs and put dynamic URIs => updated constructor of TwitchOauth client to push redirect URI through constructor

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,10 @@
-DB_USER=taxsure
-DB_NAME=taxsure_api
-DB_PASSWORD=taxsure!@
-DB_PASSWORD_ROOT=taxsure!@
-DB_HOST=mysql
-SERVER_PORT=8080
-DOCTRINE_ENTITY_LOC=src/Entities
+APP_SECRET=app_secret
+DB_USER=database_non_root_user
+DB_NAME=database_name
+DB_PASSWORD=database_password_for_non_root_user
+DB_PASSWORD_ROOT=database_password_for_root
+DB_HOST=mysql_database_hostname
+SERVER_PORT=http_port_for_host_machine
+DOCTRINE_ENTITY_LOC=location_to_entity_files
+TWITCH_CLIENT_ID=twitch_developer_client_id
+TWITCH_CLIENT_SECRET=twitch_developer_client_secret
