commit details: => added a message template => fixed some issues in twitcheventsubscriber listener => added exception handler in controller => created a session helper to move some extra code from controller => added new message template to all views

--- a/www/app/config/services.yml
+++ b/www/app/config/services.yml
@@ -19,3 +19,13 @@ services:
     arguments: ['@doctrine.orm.entity_manager']
     tags:
       - { name: kernel.event_subscriber }
+
+  twitch_event_subscription_provider:
+    public: true
+    class: Streamlabs\Provider\TwitchEventSubscriptionProvider
+    arguments:
+      - "@router"
+      - "@request_stack"
+
+
+
