commit details: => updated readme.md file => little update in composer file => added comment to .env.dist file

--- a/.env.dist
+++ b/.env.dist
@@ -1,10 +1,9 @@
-APP_SECRET=app_secret
-DB_USER=database_non_root_user
-DB_NAME=database_name
-DB_PASSWORD=database_password_for_non_root_user
-DB_PASSWORD_ROOT=database_password_for_root
-DB_HOST=mysql_database_hostname
-SERVER_PORT=http_port_for_host_machine
-DOCTRINE_ENTITY_LOC=location_to_entity_files
-TWITCH_CLIENT_ID=twitch_developer_client_id
-TWITCH_CLIENT_SECRET=twitch_developer_client_secret
+APP_SECRET=app_secret                                   ##Enter your application hash in here. you can use this website: https://hashgenerator.de/
+DB_USER=database_non_root_user                          ##Specify your database non-root user name for Docker and also for Symfony app
+DB_NAME=database_name                                   ##Specify your database name for Docker and also for Symfony app
+DB_PASSWORD=database_password_for_non_root_user         ##Specify your database password for the non-root user name for Docker and also for Symfony app
+DB_PASSWORD_ROOT=database_password_for_root             ##Specify your database password for ROOT user Docker
+DB_HOST=mysql_database_hostname                         ##Specify your mysql database hostname
+SERVER_PORT=http_port_for_host_machine                  ##Specify your host port which will listen to port 80 of your docker container
+TWITCH_CLIENT_ID=twitch_developer_client_id             ##Specify twitch client ID for your app. Get it from https://dev.twitch.tv/console
+TWITCH_CLIENT_SECRET=twitch_developer_client_secret     ##Specify twitch client secret for your app. Get it from https://dev.twitch.tv/console
